--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'java-library'
 	id 'eclipse'
 	id 'com.zyxist.chainsaw' version '0.3.1'
-	id 'org.beryx.jlink' version '1.4.4'
+	id 'org.beryx.jlink' version '2.0.1-gradle4'
 }
 
 version = '0.0.1'
@@ -32,7 +32,13 @@ application {
 }
 
 jlink {
-	launcherName = "CurseMeta3ModpackDownloader"
+	options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+	launcher {
+		name = 'CurseMeta3ModpackDownloader'
+	}
+	mergedModule {
+		requires 'java.sql'
+	}
 }
 
 eclipse.classpath.file {
