Enable jlink debugging

--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ application {
 }
 
 jlink {
-	options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+	options = [/*'--strip-debug', */'--compress', '2', '--no-header-files', '--no-man-pages']
 	launcher {
 		name = 'CurseMeta3ModpackDownloader'
 	}
