Update dependencies and ignore intellij project files

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'java-library'
 	id 'eclipse'
 	id 'com.zyxist.chainsaw' version '0.3.1'
-	id 'org.beryx.jlink' version '2.0.1-gradle4'
+	id 'org.beryx.jlink' version '2.6.4'
 }
 
 version = '0.2.0-alpha-1'
@@ -17,14 +17,14 @@ repositories {
 }
 
 dependencies {
-	implementation 'com.google.guava:guava:26.0-jre'
+	implementation 'com.google.guava:guava:27.0.1-jre'
 	implementation 'com.google.code.gson:gson:2.8.5'
-	implementation 'org.apache.httpcomponents:httpclient:4.5.6'
+	implementation 'org.apache.httpcomponents:httpclient:4.5.7'
 	implementation 'org.apache.commons:commons-lang3:3.8.1'
 	
-	implementation "org.openjfx:javafx-base:11:$platform"
-	implementation "org.openjfx:javafx-graphics:11:$platform"
-	implementation "org.openjfx:javafx-controls:11:$platform"
+	implementation "org.openjfx:javafx-base:11.0.2:$platform"
+	implementation "org.openjfx:javafx-graphics:11.0.2:$platform"
+	implementation "org.openjfx:javafx-controls:11.0.2:$platform"
 }
 
 application {
