--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,8 @@ repositories {
 dependencies {
 	implementation 'com.google.guava:guava:27.0.1-jre'
 	implementation 'com.google.code.gson:gson:2.8.5'
-	implementation 'org.apache.httpcomponents:httpclient:4.5.7'
+	implementation 'org.apache.httpcomponents:httpclient:4.5.6'
+	implementation 'commons-codec:commons-codec:1.12'
 	implementation 'org.apache.commons:commons-lang3:3.8.1'
 	
 	implementation "org.openjfx:javafx-base:11.0.2:$platform"
